Fixing bench image sizing issues on IE11

--- a/www/stylesheets/bench.scss
+++ b/www/stylesheets/bench.scss
@@ -20,8 +20,13 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      img{
-        max-width: 100%;
+      a{
+        width: 100%;
+        height: 100%;
+        display: block;
+        img{
+          max-width: 100%;
+        }
       }
       figcaption{
         position: absolute;
